# MurmurSIMD

./: .gitignore  CMakeLists.txt  LICENSE  MurmurSIMD.c  MurmurSIMD.h  MurmurSIMD32.c  MurmurSIMD32_AVX2.c  MurmurSIMD32_MMX.c  MurmurSIMD32_SSE2.c  MurmurSIMD32_x86.c  MurmurSIMD64.c  MurmurSIMD64_AVX2.c  MurmurSIMD64_SSE2.c  MurmurSIMD64_x86.c  README.md
MurmurSIMD/: MurmurSIMD.c  MurmurSIMD32_Scalar.c  MurmurSIMD_Internal.h
MurmurSIMD/Include/: MurmurSIMD.h  Targets.h
MurmurSIMD/Source/: MurmurSIMD.c  MurmurSIMD32_Scalar.c
Tests/: Test.c
